# Final

./: pyproject.toml  read
app/: manage.py  schema.yml
app/authenticate/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/companies/: serializers.py  urls.py
app/core/: asgi.py  settings.py  urls.py  wsgi.py
app/product/: serializers.py
app/sales/: serializers.py  urls.py
app/suppliers/: serializers.py
app/warehouse/: serializers.py  urls.py
